resources/assets/css/layout/_sidebar.scss
.sidebar {
	.bar {
		position: relative;
		background-color: #1d222d;

		ul li {
			height: 66px;
			text-align: center;
			cursor: pointer;
			font-size: 12px;
			padding-top: 5px;
			color: white;

			&.active {
				background-color: #38A1DB;
			}
			&:hover {
				background-color: #20B9EF;
			}

			i {
				font-size: 24px;
				display: block;
			}
		}

		.top-bar {
			
		}

		.bottom-bar {
			width: 100%;
			bottom: 0;
			position: absolute;
		}
	}

	.project {
		width: 240px;
		position: relative;

		.operation {
			position: absolute;
			bottom: 0;
			height: 40px;
			background-color: #313848;

			li {
				float: left;
				width: 79px;
				height: 40px;
				text-align: center;
				line-height: 40px;
				cursor: pointer;
				margin-left: 1px;
				color: white;

				&:hover {
					background-color: #38A1DB;
				}

				&:first-child {
					margin-left: 0;
				}

				& > i {
					margin-right: 4px;
				}
			}
		}

		.list {
			overflow-y: auto;
			top: 0;
			bottom: 40px;
			left: 0;
			right: 0;
			position: absolute;

			li {
				.title {
					height: 36px;
					line-height: 36px;
					padding-left: 8px;
					padding-right: 4px;
					cursor: pointer;
					margin-top: 1px;
					position: relative;
					color: white;
					background-color: #4b5765;

					.icon {
						margin-right: 4px;
					}

					.arrow {
						float: right;
					}

					.arrow:before {
						content: "\e615";
					}
				}

				.view {
					display: none;
					background-color: white;

					& > div {
						font-size: 12px;
						height: 36px;
						padding-left: 26px;
						line-height: 36px;
						cursor: pointer;
						color: #515151;

						.icon {
							margin-right: 4px;
						}

						&:hover {
							color: #24c1ff;
						}

						&.active {
							color: #24c1ff;
						}
					}
				}

				&:first-child .title {
					margin-top: 0;
				}
				
				&.active {
					.title {
						background-color: #488ac0;

						.arrow:before {
							content: "\e614";
						}
					}

					.view {
						display: block;
					}
				}
			}
		}
	}

	.component {
		width: 200px;
		position: relative;
		float: left;

		.search {
			margin-top: 12px;
			margin-bottom: 20px;
			margin-left: 12px;

			.key {
				height: 24px;
				width: 164px;
				font-size: 12px;
				
				padding-left: 10px;
				padding-right: 20px;
				border-radius: 12px;
				color: #515151;
				background-color: white;
				border: 1px solid #bac4d0;
			}

			& > i {
				line-height: 24px;
				right: 30px;
				position: absolute;
				color: #b9b9b6;
			}
		}

		.items {
			top: 56px;
			left: 0;
			bottom: 20px;
			right: 0;
			position: absolute;
			float: left;
			overflow-y: auto;

			.list {
				margin-left: 12px;
				float: left;

				li {
					width: 72px;
					text-align: center;
					float: left;

					&:nth-child(odd) {
						margin-right: 20px;
					}

					&.active .image {
						border: 2px solid rgb(76, 193, 252);
					}
				}
			}

			.item {
				.image {
					width: 72px;
					height: 72px;
					border-radius: 6px;
					background-color: white;
					border: 1px solid #bac4d0;
				}

				.name {
					font-size: 12px;
					color: white;
					margin-top: 5px;
					margin-bottom: 12px;
				}
			}
		}
	}

	.board {
		width: 200px;
		position: relative;
		overflow-y: auto;

		.list {
			li {
				position: relative;
				.image {
					width: 70px;
					height: 70px;
					display: block;
					margin: 0 auto;
				}

				.name {
					color: white;
					margin: 0 atuo;
					display: block;
					text-align: center;
				}

				&.normal {
					cursor: pointer;

					&:hover {
						background-color: #4B5765;
					}

					&.active {
						background-color: #4B5765;
					}
				}

				&.forward {
					.stamps {
						position: absolute;
						top: 0;
						bottom: 0;
						left: 0;
						right: 0;
						background: url('../image/stamps.png') no-repeat 115px 10px;
						background-size: 50px 50px
					}
				}
			}
		}
	}

	.library {
		width: 180px;
		position: relative;
		overflow-y: auto;

		.list {
			li {
				cursor: pointer;
				text-align: center;
				height: 36px;
				color: white;
				line-height: 36px;

				&:hover {
					background-color: #488ac0;
				}

				&.active {
					background-color: #488ac0;
				}
			}
		}
	}

	.example {
		width: 240px;
		position: relative;

		.list { 
			li {
				cursor: pointer;
				text-align: center;
				height: 36px;
				line-height: 36px;
				color: white;

				& > ul {
					position: relative;
					left: 100%;
					top: -100%;
					display: none;
					background-color: rgba(52, 58, 74, 0.92);
				}

				&:hover {
					background-color: #488ac0;

					& > ul {
						display: block;
					}
				}

				&.active {
					background-color: #488ac0;
				}
			}
		}
	}
}

